Fixed scrollbar issue maybe pt. 2

--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    height: 100vh;
-    min-height: 100vh;
 }
 
 @keyframes gradient {
